--- a/style.css
+++ b/style.css
@@ -25,12 +25,10 @@ header .container img{
                       /*Inicio da media query para smartphones: topo do site*/
 @media (max-width: 480px){
     header .container img{
-        width: 60px;
-    }
-    header .container nav a{
-        font-size: 14px;
+        width: 50px;
     }
 }                       /*fim da media query para smartphones: topo do site*/
+
 
 nav{
     margin-left: 5px;
@@ -42,6 +40,11 @@ header .container nav a{
     color: black;
     margin-left: 5px;
     padding: 5px;
+}
+@media (max-width: 480px){
+    header .container nav a{
+        font-size: 14px;
+    }
 }
 header .container nav a:hover{
     background-color: #000000;
@@ -148,10 +151,11 @@ section{
 }
 @media (max-width: 480px) {
     .servicos .container-cards .cards{
+        width: 100%;
         max-width: 350px;
     }
-    .cards img{
-        width: 300px;
+    .servicos .container-cards .cards img{
+        width: 100%;
         height: 250px;
     }
 }
