--- a/style.css
+++ b/style.css
@@ -9,15 +9,28 @@ header{
     background-color: #fff;
 }
 header .container{
-    max-width: 1024px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 10px;
     display: flex;
     align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    gap: 20px;
     flex: 0 1 auto;
     justify-content: space-between;
     border-bottom: 1px solid #000000;
+}
+@media (max-width: 480px){
+    header .container{
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    nav{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
 header .container img{
     width: 80px;
@@ -28,11 +41,13 @@ header .container img{
         width: 50px;
     }
 }                       /*fim da media query para smartphones: topo do site*/
-
-
 nav{
     margin-left: 5px;
     padding: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: nowrap;
 }
 header .container nav a{
     font-size: 16px;
@@ -44,12 +59,13 @@ header .container nav a{
 @media (max-width: 480px){
     header .container nav a{
         font-size: 14px;
+        margin-left: 3px;
+        padding: 3px;
     }
 }
 header .container nav a:hover{
     background-color: #000000;
     color: #fff;
-    padding: 10px;
     border-radius: 5px;
 }
 section{
@@ -57,17 +73,16 @@ section{
 }
 
 .banner{
-    height: 100vh;
+    min-height: 60vh;
     width: 100%;
     background-image: url("./img/exterior-barbershop.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-@media (max-width: 600px){
+@media (max-width: 480px){
     .banner{
-        height: 50vh;
-        background-position: top right;
+        min-height: 40vh;
     }
 }
 
@@ -91,9 +106,14 @@ section{
     flex: 1 1 500px;
 }
 .secao-banner .container div h1{
-    font-size: 42px;
+    font-size: 28px;
     color: #fff;
     margin-bottom: 30px;
+}
+@media (min-width: 768px) {
+    .secao-banner .container div h1{
+        font-size: 42px;
+    }
 }
 .secao-banner .container div h1 span{
     color: rgb(251 191 36);
@@ -116,6 +136,14 @@ section{
     justify-content: space-around;
     background-color: #fff;
 }
+@media (max-width: 480px){
+    .container{
+        padding: 30px 15px;
+    }
+    .servicos .texto{
+        padding: 20px 10px;
+    }
+}
 .servicos .texto{
     max-width: 800px;
     margin: 10px auto;
@@ -123,7 +151,12 @@ section{
     text-align: center;
 }
 .servicos .texto h2{
-    font-size: 32px;
+    font-size: 20px;
+}
+@media (min-width: 768px) {
+    .servicos .texto h2{
+        font-size: 32px;
+    }
 }
 .servicos .texto p{
     font-size: 18px;
@@ -137,6 +170,12 @@ section{
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
+}
+@media(max-width:768px){
+    .servicos .container-cards{
+        flex-direction: column;
+        align-items: center;
+    }
 }
 .servicos .container-cards .cards{
     max-width: 450px;
@@ -154,18 +193,22 @@ section{
         width: 100%;
         max-width: 350px;
     }
+    
+}
+@media (max-width: 480px){
     .servicos .container-cards .cards img{
-        width: 100%;
-        height: 250px;
+        max-width: 300px;
+        max-height: 250px;
     }
 }
 .cards:hover{
     box-shadow: 0 0 20px  #000;
-    transition: 0.3s;
+    transition: box-shadow 0.3s;
 }
 .cards img{
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
     border-radius: 10px; 
     margin-bottom: 20px;  
 }
@@ -187,9 +230,10 @@ section{
 .precos{
     width: 100%;
     background-color: #fff;
+    overflow-x: auto;
 }
 table{
-    max-width: 1024px;
+    width: 100%;
     background-color: #e5e7eb;
     padding: 15px;
     border-radius: 10px;
@@ -295,9 +339,14 @@ tfoot td p{
     text-align: center;
 }
 .secao-contato .destaque h3{
-    font-size: 42px;
+    font-size: 28px;
     color: #fff;
     margin-bottom: 10px;
+}
+@media (min-width: 768px) {
+    .secao-contato .destaque h3{
+        font-size: 42px;
+    }
 }
 .secao-contato .destaque h3 span{
     color: rgb(251 191 36);
@@ -337,7 +386,7 @@ tfoot td p{
 .contatos a:hover{
     font-size: 20px;
     font-weight: bold;
-    transition: 0.4;
+    transition: 0.4s;
 }
 footer{
     width: 100%;
